few more plots added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3845 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -23,6 +23,9 @@ asy: fig/.timecache fig/pdf $(timestamps)
 .timecache :
 	@mkdir -p .timecache
 
+fig/.timecache :
+	@mkdir -p fig/.timecache
+
 fig/pdf :
 	@mkdir -p fig/pdf
 
