--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -9,7 +9,7 @@ tex: thesis.pdf
 
 thesis.pdf : thesis.tex references.tex $(timestamps) \
 	alignment.tex appendices.tex elasticReco.tex elastic.tex introduction.tex references.tex \
-	sigma_tot.tex simu_reco.tex smearing.tex elasticReco.tex extrapolation.tex
+	first_el_measurement.tex elasticReco.tex extrapolation.tex
 	@echo "* TeX"
 	@#pdftex -fmt encpdftex -interaction batchmode thesis.tex &> /dev/nul
 	@pdftex -interaction batchmode thesis.tex &> /dev/null || pdftex thesis.tex
