--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -8,8 +8,8 @@ all: asy tex
 tex: thesis.pdf
 
 thesis.pdf : thesis.tex references.tex $(timestamps) \
-	alignment.tex appendices.tex elasticReco.tex elastic.tex introduction.tex references.tex \
-	first_el_measurement.tex elasticReco.tex extrapolation.tex
+	alignment.tex appendices.tex  elastic.tex introduction.tex references.tex \
+	first_el_measurement.tex  extrapolation.tex
 	@echo "* TeX"
 	@#pdftex -fmt encpdftex -interaction batchmode thesis.tex &> /dev/nul
 	@pdftex -interaction batchmode thesis.tex &> /dev/null || pdftex thesis.tex
