couple of figures updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4669 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -31,7 +31,7 @@ fig/pdf :
 
 $(timestamps) : fig/.timecache/%.pdf : fig/asy/%
 	@echo "* asy $<"
-	cd "fig/asy"; asy -o "../pdf/" $(ASYOPT) "../../$<"
+	cd "fig/pdf"; asy $(ASYOPT) "../../$<"
 	@touch $@
 
 info:
