ttm intro started
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4959 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -1,5 +1,6 @@
 files = $(wildcard fig/asy/*.asy)
 timestamps = $(patsubst fig/asy/%, fig/.timecache/%.pdf, $(files))
+ASYOPT = -tex pdftex
 
 .PHONY: all asy tex info
 
