figures for summary
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5178 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/makefile
+++ b/2010/thesis/makefile
@@ -9,7 +9,7 @@ all: asy tex
 tex: thesis.pdf
 
 thesis.pdf : thesis.tex references.tex $(timestamps) \
-	alignment.tex appendices.tex  elastic.tex introduction.tex references.tex \
+	alignment.tex elastic.tex introduction.tex references.tex \
 	first_el_measurement.tex
 	@echo "* TeX"
 	@#pdftex -fmt encpdftex -interaction batchmode thesis.tex &> /dev/nul
