--- a/2014/90m_1km paper/makefile
+++ b/2014/90m_1km paper/makefile
@@ -1,4 +1,4 @@
 all: elastic_90m_1km_prl.pdf
 
-elastic_90m_1km_prl.pdf: elastic_90m_1km_prl.tex authorlist_prl.tex introduction.tex analysis.tex
+elastic_90m_1km_prl.pdf: elastic_90m_1km_prl.tex authorlist_prl.tex introduction.tex framework.tex analysis.tex
 	pdflatex elastic_90m_1km_prl.tex
