--- a/2013/1km paper/makefile
+++ b/2013/1km paper/makefile
@@ -1,6 +1,10 @@
-all: elastic_1km_prl.pdf
+all: elastic_1km_epjc.pdf
 
 
 elastic_1km_prl.pdf: elastic_1km_prl.tex authorlist_prl.tex introduction.tex experimental_apparatus.tex\
 		data_taking.tex differential_cross_section.tex data_table.tex coulomb.tex
 	pdflatex elastic_1km_prl.tex
+
+elastic_1km_epjc.pdf: elastic_1km_epjc.tex authorlist_epjc.tex introduction.tex experimental_apparatus.tex\
+		data_taking.tex differential_cross_section.tex data_table.tex coulomb.tex
+	pdflatex elastic_1km_epjc.tex
