Mario's comments reviewed
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9710 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/makefile
+++ b/2014/90m paper/makefile
@@ -1,6 +1,6 @@
-all: elastic_90m_epjc.pdf
+all: elastic_90m_npb.pdf
 
 
-elastic_90m_epjc.pdf: elastic_90m_epjc.tex authorlist_epjc.tex introduction.tex experimental_apparatus.tex\
+elastic_90m_npb.pdf: elastic_90m_npb.tex authorlist_npb.tex introduction.tex experimental_apparatus.tex\
 		data_taking.tex differential_cross_section.tex
-	pdflatex elastic_90m_epjc.tex
+	pdflatex elastic_90m_npb.tex
