--- a/2014/90m paper/makefile
+++ b/2014/90m paper/makefile
@@ -2,5 +2,5 @@ all: elastic_90m_npb.pdf
 
 
 elastic_90m_npb.pdf: elastic_90m_npb.tex authorlist_npb.tex introduction.tex experimental_apparatus.tex\
-		data_taking.tex differential_cross_section.tex
+		data_taking.tex differential_cross_section.tex results.tex
 	pdflatex elastic_90m_npb.tex
