all referees' comments projected into text
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9862 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/makefile
+++ b/2014/90m paper/makefile
@@ -2,5 +2,5 @@ all: elastic_90m_npb.pdf
 
 
 elastic_90m_npb.pdf: elastic_90m_npb.tex authorlist_npb.tex introduction.tex experimental_apparatus.tex\
-		data_taking.tex differential_cross_section.tex results.tex
+		data_taking.tex differential_cross_section.tex results.tex conclusion.tex
 	pdflatex elastic_90m_npb.tex
