started updating the analysis part
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10044 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/makefile
+++ b/2013/1km paper/makefile
@@ -1,5 +1,14 @@
 all: elastic_1km_npb.pdf
 
-elastic_1km_npb.pdf: elastic_1km_npb.tex authorlist_npb.tex introduction.tex experimental_apparatus.tex\
-		data_taking.tex differential_cross_section.tex data_table.tex coulomb.tex
+elastic_1km_npb.pdf: elastic_1km_npb.tex \
+		authorlist_npb.tex \
+		introduction.tex \
+		experimental_apparatus.tex \
+		beam_optics.tex \
+		data_taking.tex \
+		differential_cross_section.tex \
+		data_table.tex \
+		coulomb.tex \
+		conclusions.tex \
+		acknowledgements.tex
 	pdflatex elastic_1km_npb.tex
