--- a/2014/90m paper/makefile
+++ b/2014/90m paper/makefile
@@ -1,6 +1,15 @@
 all: elastic_90m_npb.pdf
 
 
-elastic_90m_npb.pdf: elastic_90m_npb.tex authorlist_npb.tex introduction.tex experimental_apparatus.tex\
-		data_taking.tex differential_cross_section.tex results.tex conclusion.tex
+elastic_90m_npb.pdf: elastic_90m_npb.tex \
+		authorlist_data.tex \
+		authorlist_npb.tex \
+		abstract.tex \
+		introduction.tex \
+		experimental_apparatus.tex \
+		data_taking.tex \
+		differential_cross_section.tex \
+		results.tex \
+		conclusion.tex \
+		acknowledgements.tex
 	pdflatex elastic_90m_npb.tex
