hopefully last iteration started
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10742 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/makefile
+++ b/2013/1km paper/makefile
@@ -9,6 +9,8 @@ elastic_1km_npb.pdf: elastic_1km_npb.tex \
 		differential_cross_section.tex \
 		data_table.tex \
 		coulomb.tex \
+		fig/fit_exp1/table_data.tex \
+		fig/fit_exp3/table_data.tex \
 		conclusions.tex \
 		acknowledgements.tex
 	pdflatex elastic_1km_npb.tex
