added abstract to makefile
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11450 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/makefile
+++ b/2013/1km paper/makefile
@@ -1,6 +1,7 @@
 all: elastic_1km_npb.pdf
 
 elastic_1km_npb.pdf: elastic_1km_npb.tex \
+		abstract.tex \
 		authorlist_npb.tex \
 		introduction.tex \
 		experimental_apparatus.tex \
